[package]
name = "interning"
version = "0.1.4"
edition = "2021"

authors = ["JakkuSakura <qjk2001@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A Simple Thread-Lcoal and Global Interning Library"
repository = "https://github.com/JakkuSakura/interning"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stable-hash = "0.4.3"
dashmap = "5.5.3"
lazy_static = "1.4.0"
serde = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_interned_string"
harness = false
